--- a/style/palette.css
+++ b/style/palette.css
@@ -407,7 +407,7 @@
     --field-color:          #4c566a;
 
     --border-dark-color:    #2e3440;
-    --border-light-color:   #d8dee9;
+    --border-light-color:   #747a85;
     --border-field-color:   #d8dee933;
 
     --hover-color:          #434c5e;
