fixed markdown wrapping with multiple selections on editor

--- a/script/codemirror/lib/codemirror.css
+++ b/script/codemirror/lib/codemirror.css
@@ -464,7 +464,9 @@ div.CodeMirror-dragcursors {
 }
 
 .CodeMirror-selected {
-    background: var(--selection-color);
+    background: var(--active-line);
+    overflow: 30%;
+    border-radius: 4px;
 }
 
 .CodeMirror-focused .CodeMirror-selected {
