--- a/style/prompts.css
+++ b/style/prompts.css
@@ -22,7 +22,7 @@
 
 @keyframes fadeOut {
     from { opacity: 1; }
-    to   { opacity: 0; }
+    to   { opacity: 0; transform: scale(.9);}
 }
 
 @keyframes blackout {
@@ -584,4 +584,75 @@ h5.setting-subtitle {
     cursor: pointer;
     padding: 4px;
     color: inherit;
+}
+
+.color-preview-dialog .dialog-window-control {
+    background-color: #00000033;
+    text-shadow: var(--shadow-light);
+}
+
+.color-preview-dialog .dialog-window-control:hover {
+    background-color: var(--field-color);
+    text-shadow: none;
+}
+
+.color-info-preview {
+    width: 100%;
+    height: 128px;
+    box-shadow: var(--shadow);
+}
+
+.color-info-list {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    margin: 24px 8px;
+}
+
+.color-info-row {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+}
+
+.color-info-label {
+    width: 80px;
+    color: var(--text-color-secondary);
+    font-size: 0.9em;
+    text-align: right;
+    user-select: none;
+    cursor: help;
+}
+
+#color-scheme-colors {
+    margin: 12px 0;
+    display: flex;
+    gap: 2px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.color-scheme-box {
+    width: 24px;
+    height: 24px;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: width 0.3s;
+}
+
+.color-scheme-box:first-of-type {
+    border-radius: 10px 3px 3px 10px;
+}
+
+.color-scheme-box:last-of-type {
+    border-radius: 3px 10px 10px 3px;
+}
+
+.color-scheme-box:hover {
+    width: 48px;
+}
+
+#color-scheme-container {
+    margin-top: 15px;
+    padding-top: 15px;
 }
