--- a/style/preview.css
+++ b/style/preview.css
@@ -732,17 +732,55 @@
     border-radius: 4px;
 }
 
-.preview meter::-webkit-meter-optimum-value,
-.preview meter::-webkit-meter-suboptimum-value,
-.preview meter::-webkit-meter-even-less-good-value {
-    background: var(--highlight-color);
-    border-radius: 4px;
+/* kbd */
 
-    /* should make the meter value the same height as on firefox, somehow doesn't work, I don't know how to fix it */
-    display: block;
-    height: 100%;
-    box-sizing: border-box;
+.preview kbd {
+    background-color: var(--background-color-2);
+    border: 1px solid var(--border-light-color);
+    color: var(--title-color);
+    padding: 3px 6px;
+    border-radius: 6px;
+    box-shadow: var(--shadow-light), 0 1px 0px var(--border-light-color);
+    text-transform: capitalize;
+    margin: 0px 3px;
 }
+
+.preview kbd.key-shift, .preview kbd.key-alt, .preview kbd.key-ctrl, .preview kbd.key-meta, .preview kbd.key-cmd,
+.preview kbd.key-super, .preview kbd.key-windows, .preview kbd.key-enter, .preview kbd.key-esc, .preview kbd.key-tab,
+.preview kbd.key-page-up, .preview kbd.key-page-down, .preview kbd.key-up, .preview kbd.key-down, .preview kbd.key-left,
+.preview kbd.key-right, .preview kbd.key-backspace, .preview kbd.key-delete, .preview kbd.key-insert,
+.preview kbd.key-caps-lock, .preview kbd.key-print-screen
+{ position: relative; padding-left: 20px; text-transform: capitalize; }
+
+.preview kbd.key-shift::before, .preview kbd.key-alt::before, .preview kbd.key-ctrl::before, .preview kbd.key-meta::before,
+.preview kbd.key-cmd::before, .preview kbd.key-super::before, .preview kbd.key-windows::before, .preview kbd.key-enter::before,
+.preview kbd.key-esc::before, .preview kbd.key-tab::before, .preview kbd.key-page-up::before, .preview kbd.key-page-down::before,
+.preview kbd.key-up::before, .preview kbd.key-down::before, .preview kbd.key-left::before, .preview kbd.key-right::before,
+.preview kbd.key-backspace::before, .preview kbd.key-delete::before, .preview kbd.key-insert::before,
+.preview kbd.key-caps-lock::before, .preview kbd.key-print-screen::before
+{ font-family: "Material Symbols Rounded"; font-size: 14px; position: absolute; left: 4px; top: 50%; transform: translateY(-50%); }
+
+.preview kbd.key-shift::before        { content: "arrow_upward"; }
+.preview kbd.key-alt::before          { content: "keyboard_option_key"; }
+.preview kbd.key-ctrl::before         { content: "keyboard_control_key"; }
+.preview kbd.key-meta::before         { content: "keyboard_command_key"; }
+.preview kbd.key-cmd::before          { content: "keyboard_command_key"; }
+.preview kbd.key-super::before        { content: "action_key"; }
+.preview kbd.key-windows::before      { content: "window"; }
+.preview kbd.key-enter::before        { content: "keyboard_return"; }
+.preview kbd.key-esc::before          { content: "close"; }
+.preview kbd.key-tab::before          { content: "keyboard_tab"; }
+.preview kbd.key-page-up::before      { content: "arrow_upward"; }
+.preview kbd.key-page-down::before    { content: "arrow_downward"; }
+.preview kbd.key-up::before           { content: "arrow_upward"; }
+.preview kbd.key-down::before         { content: "arrow_downward"; }
+.preview kbd.key-left::before         { content: "arrow_back"; }
+.preview kbd.key-right::before        { content: "arrow_forward"; }
+.preview kbd.key-backspace::before    { content: "backspace"; }
+.preview kbd.key-delete::before       { content: "remove"; }
+.preview kbd.key-insert::before       { content: "arrow_insert"; }
+.preview kbd.key-caps-lock::before    { content: "keyboard_capslock"; }
+.preview kbd.key-print-screen::before { content: "screenshot_keyboard"; }
 
 /* Banner/Header */
 .preview .meta-container {
