--- a/style/preview.css
+++ b/style/preview.css
@@ -210,6 +210,7 @@
     overflow-x: auto;
     padding: 18px 10px 10px 10px;
     position: relative;
+    border: 1px solid var(--border-light-color);
 }
 
 .preview .code-container code {
